--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,18 @@
   <link rel="icon" href="/static/vue/favicon.ico">
   {% block description %}{% endblock %}
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XKE192T3R2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-XKE192T3R2');
+  </script>
+  <!-- Fathom - beautiful, simple website analytics -->
+  <script src="https://cdn.usefathom.com/script.js" data-spa="auto" data-site="DOTNXRXV" defer></script>
+  <!-- / Fathom -->
+  <script defer data-domain="adapt.run" src="https://plausible.io/js/plausible.js"></script>
 </head>
 
 <body>
