Update Run ADAPT form
Move and rename nickname, note specificity is optional, add link to taxonomic ID database, add dividing lines between sections

--- a/vue_frontend/src/assets/styles.scss
+++ b/vue_frontend/src/assets/styles.scss
@@ -240,6 +240,11 @@ button:not(.list-group-item):not(.taxon) {
   transform: rotate(180deg);
 }
 
+hr {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
 a.anchor {
     display: block;
     position: relative;
