Show note on assays page that they are for RPA/Cas13a
Also update alignment to summary to get rid of unused variables

--- a/vue_frontend/src/assets/styles.scss
+++ b/vue_frontend/src/assets/styles.scss
@@ -310,6 +310,11 @@ a.anchor {
   text-decoration: none;
 }
 
+.disclaimer {
+  font-size: 0.85em;
+  font-style: italic;
+}
+
 .multiselect__option--selected.multiselect__option--highlight {
   background: #f3f3f3;
   color: #35495e;
