--- a/templates/designs.html
+++ b/templates/designs.html
@@ -2,7 +2,7 @@
 
 {% block title %}Assays{% endblock %}
 {% block description %}
-<meta name="description" content="Premade Cas13a assays for the most common vertebrate infecting viruses, created using ADAPT.">
+<meta name="description" content="Pre-designed Cas13a assays for the most common vertebrate infecting viruses, created using ADAPT.">
 <link rel="stylesheet" href="https://unpkg.com/vue-multiselect@2.1.0/dist/vue-multiselect.min.css">
 {% endblock %}
 
