--- a/templates/runadapt.html
+++ b/templates/runadapt.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}Run{% endblock %}
-{% block description %}<meta name="description" content="Run ADAPT on your own data or with a taxonomic ID.">{% endblock %}
+{% block description %}<meta name="description" content="Run ADAPT on your own data or with a taxonomy identifier.">{% endblock %}
 
 
 {% block content %}
