--- a/templates/results.html
+++ b/templates/results.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}Results{% endblock %}
-{% block description %}<meta name="description" content="Access the results from an ADAPT run you previously submitted, given the Run ID. Shows a listing and visualization for each Cas13a assay.">{% endblock %}
+{% block description %}<meta name="description" content="Access the results from an ADAPT run you previously submitted, given a Run ID. Shows a listing and visualization for each Cas13a assay.">{% endblock %}
 
 
 {% block content %}
