--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
-{% block title %}About{% endblock %}
-{% block description %}<meta name="description" content="An explanation of what ADAPT (Activity-informed Design with All-inclusive Patrolling of Targets) does and references to learn more.">{% endblock %}
+{% block title %}Home{% endblock %}
+{% block description %}<meta name="description" content="Information on what ADAPT (Activity-informed Design with All-inclusive Patrolling of Targets) does and references to learn more.">{% endblock %}
 
 {% block content %}
 
