Bigger header font for navbar items

--- a/vue_frontend/src/assets/styles.scss
+++ b/vue_frontend/src/assets/styles.scss
@@ -136,11 +136,11 @@ text {
 }
 
 .header {
-  font-size: min(0.7em, 3vw);
+  font-size: 0.8rem;
 }
 
 .footer {
-  font-size: min(0.65em, 3vw);
+  font-size: min(0.65rem, 3vw);
 }
 
 .navbar-collapse .nav-item {
