--- a/templates/runadapt.html
+++ b/templates/runadapt.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 
 {% block title %}Run{% endblock %}
-{% block description %}<meta name="description" content="Run ADAPT on your own data or with a taxonomy identifier.">{% endblock %}
+{% block description %}
+<meta name="description" content="Run ADAPT on your own data or on a viral taxon.">
+<link rel="stylesheet" href="https://unpkg.com/vue-multiselect@2.1.0/dist/vue-multiselect.min.css">{% endblock %}
 
 
 {% block content %}
