Add OpenGraphs metadata tags
For Twitter and other previews

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,11 @@
 {% extends 'base.html' %}
 
-{% block title %}Home{% endblock %}
-{% block description %}<meta name="description" content="Design maximally active nucleic acid-based diagnostics for viruses using ADAPT.">{% endblock %}
+{% block details %}
+<title>ADAPT</title>
+<meta property=og:title content="ADAPT">
+<meta property="og:url" content="https://adapt.run">
+<meta property="og:description" content="Design nucleic acid-based viral diagnostics with maximum sensitivity using ADAPT.">
+{% endblock %}
 
 {% block content %}
 
