--- a/templates/designs.html
+++ b/templates/designs.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
 
-{% block title %}Assays{% endblock %}
-{% block description %}
-<meta name="description" content="Pre-designed Cas13a assays for the most common vertebrate infecting viruses, created using ADAPT.">
+{% block details %}
+<title>ADAPT - Assays</title>
+<meta property=og:title content="ADAPT - Assays">
+<meta property="og:url" content="https://adapt.run/designs/">
+<meta property=og:description content="Pre-designed Cas13a assays for the most common vertebrate infecting viruses, created using ADAPT.">
 <link rel="stylesheet" href="https://unpkg.com/vue-multiselect@2.1.0/dist/vue-multiselect.min.css">
 {% endblock %}
 
